--- a/cv-project-4-smart-cropping/smartPageCropper.ipynb
+++ b/cv-project-4-smart-cropping/smartPageCropper.ipynb
@@ -36,7 +36,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 2,
       "metadata": {
         "id": "Whzuy-hUHm_G"
       },
@@ -177,8 +177,7 @@
       "outputs": [],
       "source": [
         "# save cropped image\n",
-        "status = cv2.imwrite(output_path + image_filename + '_cropped' + '.jpg', output)\n",
-        " \n",
+        "status = cv2.imwrite(output_path + +\"\\\\\" + image_filename + '_cropped' + '.jpg', output)\n",
         "print(\"Image written to file-system : \",status)"
       ]
     },
@@ -203,99 +202,108 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
-      "metadata": {
-        "id": "f94UGLeEHZ_R"
-      },
+      "execution_count": 23,
+      "metadata": {},
       "outputs": [],
       "source": [
-        "def load_images_from_folder(folder):\n",
-        "    images = []\n",
+        "def bulkCropImages(folder):\n",
         "    for filename in os.listdir(folder):\n",
-        "        img = cv2.imread(os.path.join(folder,filename))\n",
-        "        if img is not None:\n",
-        "            images.append(img)\n",
-        "    return images"
+        "        image = cv2.imread(os.path.join(folder,filename))\n",
+        "        if image is not None:\n",
+        "            #Read image and convert to gray.\n",
+        "            gray_image = cv2.cvtColor(image,cv2.COLOR_BGR2GRAY)\n",
+        "            #Use blur to get rid of the notebook's details.\n",
+        "            blurred_gray_image = cv2.blur(gray_image,(21,21))\n",
+        "            #forget histogram, we assume threshold values from testing earlier\n",
+        "            _,thresholded_blurry_image = cv2.threshold(blurred_gray_image,150,255,cv2.THRESH_BINARY) #165, 255 #120,255\n",
+        "            #Detect contours (which are undivided, closed shapes).\n",
+        "            contours, hierarchy = cv2.findContours(thresholded_blurry_image,cv2.RETR_TREE, cv2.CHAIN_APPROX_SIMPLE)\n",
+        "            if len(contours) != 0:\n",
+        "                c = max(contours, key = cv2.contourArea)\n",
+        "                # coordinates of the contour\n",
+        "                x,y,w,h = cv2.boundingRect(c)\n",
+        "            #now crop image\n",
+        "            output = image[y:y+h, x:x+w]\n",
+        "            # save cropped image\n",
+        "            status = cv2.imwrite(output_path + \"\\\\\" + filename + '_cropped' + '.jpg', output)\n",
+        "            print(filename + \" written to \" + output_path + \": \" + str(status))"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": 24,
-      "metadata": {
-        "id": "iihGmtdZHh7n"
-      },
-      "outputs": [
-        {
-          "ename": "KeyboardInterrupt",
-          "evalue": "",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "Cell \u001b[1;32mIn[24], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m raw_images \u001b[39m=\u001b[39m load_images_from_folder(input_path)\n",
-            "Cell \u001b[1;32mIn[20], line 4\u001b[0m, in \u001b[0;36mload_images_from_folder\u001b[1;34m(folder)\u001b[0m\n\u001b[0;32m      2\u001b[0m images \u001b[39m=\u001b[39m []\n\u001b[0;32m      3\u001b[0m \u001b[39mfor\u001b[39;00m filename \u001b[39min\u001b[39;00m os\u001b[39m.\u001b[39mlistdir(folder):\n\u001b[1;32m----> 4\u001b[0m     img \u001b[39m=\u001b[39m cv2\u001b[39m.\u001b[39;49mimread(os\u001b[39m.\u001b[39;49mpath\u001b[39m.\u001b[39;49mjoin(folder,filename))\n\u001b[0;32m      5\u001b[0m     \u001b[39mif\u001b[39;00m img \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m      6\u001b[0m         images\u001b[39m.\u001b[39mappend(img)\n",
-            "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
-          ]
-        }
-      ],
-      "source": [
-        "raw_images = load_images_from_folder(input_path)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 23,
-      "metadata": {
-        "id": "yMQXjRlLH9K2"
-      },
+      "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "677\n"
+            "20221226_190425.jpg written to D:\\Projects\\repos\\ai\\cv-project-4-smart-cropping\\cropped: True\n",
+            "20221226_190439.jpg written to D:\\Projects\\repos\\ai\\cv-project-4-smart-cropping\\cropped: True\n",
+            "20221226_190445.jpg written to D:\\Projects\\repos\\ai\\cv-project-4-smart-cropping\\cropped: True\n",
+            "20221226_190451.jpg written to D:\\Projects\\repos\\ai\\cv-project-4-smart-cropping\\cropped: True\n",
+            "20221226_190500.jpg written to D:\\Projects\\repos\\ai\\cv-project-4-smart-cropping\\cropped: True\n",
+            "20221226_190503.jpg written to D:\\Projects\\repos\\ai\\cv-project-4-smart-cropping\\cropped: True\n",
+            "20221226_190508.jpg written to D:\\Projects\\repos\\ai\\cv-project-4-smart-cropping\\cropped: True\n",
+            "20221226_190513.jpg written to D:\\Projects\\repos\\ai\\cv-project-4-smart-cropping\\cropped: True\n",
+            "20221226_190519.jpg written to D:\\Projects\\repos\\ai\\cv-project-4-smart-cropping\\cropped: True\n",
+            "20221226_190524.jpg written to D:\\Projects\\repos\\ai\\cv-project-4-smart-cropping\\cropped: True\n",
+            "20221226_190533.jpg written to D:\\Projects\\repos\\ai\\cv-project-4-smart-cropping\\cropped: True\n",
+            "20221226_190537.jpg written to D:\\Projects\\repos\\ai\\cv-project-4-smart-cropping\\cropped: True\n",
+            "20221226_190545.jpg written to D:\\Projects\\repos\\ai\\cv-project-4-smart-cropping\\cropped: True\n",
+            "20221226_190549.jpg written to D:\\Projects\\repos\\ai\\cv-project-4-smart-cropping\\cropped: True\n",
+            "20221226_190608.jpg written to D:\\Projects\\repos\\ai\\cv-project-4-smart-cropping\\cropped: True\n",
+            "20221226_190612.jpg written to D:\\Projects\\repos\\ai\\cv-project-4-smart-cropping\\cropped: True\n",
+            "20221226_190622.jpg written to D:\\Projects\\repos\\ai\\cv-project-4-smart-cropping\\cropped: True\n",
+            "20221226_190629.jpg written to D:\\Projects\\repos\\ai\\cv-project-4-smart-cropping\\cropped: True\n",
+            "20221226_190634.jpg written to D:\\Projects\\repos\\ai\\cv-project-4-smart-cropping\\cropped: True\n",
+            "20221226_190636.jpg written to D:\\Projects\\repos\\ai\\cv-project-4-smart-cropping\\cropped: True\n",
+            "20221226_190646.jpg written to D:\\Projects\\repos\\ai\\cv-project-4-smart-cropping\\cropped: True\n",
+            "20221226_190650.jpg written to D:\\Projects\\repos\\ai\\cv-project-4-smart-cropping\\cropped: True\n",
+            "20221226_190708.jpg written to D:\\Projects\\repos\\ai\\cv-project-4-smart-cropping\\cropped: True\n",
+            "20221226_190712.jpg written to D:\\Projects\\repos\\ai\\cv-project-4-smart-cropping\\cropped: True\n",
+            "20221226_190722.jpg written to D:\\Projects\\repos\\ai\\cv-project-4-smart-cropping\\cropped: True\n",
+            "20221226_190726.jpg written to D:\\Projects\\repos\\ai\\cv-project-4-smart-cropping\\cropped: True\n",
+            "20221226_190733.jpg written to D:\\Projects\\repos\\ai\\cv-project-4-smart-cropping\\cropped: True\n",
+            "20221226_190737.jpg written to D:\\Projects\\repos\\ai\\cv-project-4-smart-cropping\\cropped: True\n",
+            "20221226_190743.jpg written to D:\\Projects\\repos\\ai\\cv-project-4-smart-cropping\\cropped: True\n",
+            "20221226_190746.jpg written to D:\\Projects\\repos\\ai\\cv-project-4-smart-cropping\\cropped: True\n",
+            "20221226_190751.jpg written to D:\\Projects\\repos\\ai\\cv-project-4-smart-cropping\\cropped: True\n",
+            "20221226_190754.jpg written to D:\\Projects\\repos\\ai\\cv-project-4-smart-cropping\\cropped: True\n",
+            "20221226_190800.jpg written to D:\\Projects\\repos\\ai\\cv-project-4-smart-cropping\\cropped: True\n",
+            "20221226_190803.jpg written to D:\\Projects\\repos\\ai\\cv-project-4-smart-cropping\\cropped: True\n",
+            "20221226_190812.jpg written to D:\\Projects\\repos\\ai\\cv-project-4-smart-cropping\\cropped: True\n",
+            "20221226_190815.jpg written to D:\\Projects\\repos\\ai\\cv-project-4-smart-cropping\\cropped: True\n",
+            "20221226_190822.jpg written to D:\\Projects\\repos\\ai\\cv-project-4-smart-cropping\\cropped: True\n",
+            "20221226_190826.jpg written to D:\\Projects\\repos\\ai\\cv-project-4-smart-cropping\\cropped: True\n",
+            "20221226_190832.jpg written to D:\\Projects\\repos\\ai\\cv-project-4-smart-cropping\\cropped: True\n",
+            "20221226_190835.jpg written to D:\\Projects\\repos\\ai\\cv-project-4-smart-cropping\\cropped: True\n",
+            "20221226_190844.jpg written to D:\\Projects\\repos\\ai\\cv-project-4-smart-cropping\\cropped: True\n",
+            "20221226_190848.jpg written to D:\\Projects\\repos\\ai\\cv-project-4-smart-cropping\\cropped: True\n",
+            "20221226_190857.jpg written to D:\\Projects\\repos\\ai\\cv-project-4-smart-cropping\\cropped: True\n",
+            "20221226_190901.jpg written to D:\\Projects\\repos\\ai\\cv-project-4-smart-cropping\\cropped: True\n",
+            "20221226_190907.jpg written to D:\\Projects\\repos\\ai\\cv-project-4-smart-cropping\\cropped: True\n",
+            "20221226_190911.jpg written to D:\\Projects\\repos\\ai\\cv-project-4-smart-cropping\\cropped: True\n",
+            "20221226_190916.jpg written to D:\\Projects\\repos\\ai\\cv-project-4-smart-cropping\\cropped: True\n",
+            "20221226_190921.jpg written to D:\\Projects\\repos\\ai\\cv-project-4-smart-cropping\\cropped: True\n",
+            "20221226_190928.jpg written to D:\\Projects\\repos\\ai\\cv-project-4-smart-cropping\\cropped: True\n",
+            "20221226_190932.jpg written to D:\\Projects\\repos\\ai\\cv-project-4-smart-cropping\\cropped: True\n",
+            "20221226_190937.jpg written to D:\\Projects\\repos\\ai\\cv-project-4-smart-cropping\\cropped: True\n",
+            "20221226_190939.jpg written to D:\\Projects\\repos\\ai\\cv-project-4-smart-cropping\\cropped: True\n",
+            "20221226_190954.jpg written to D:\\Projects\\repos\\ai\\cv-project-4-smart-cropping\\cropped: True\n",
+            "20221226_191002.jpg written to D:\\Projects\\repos\\ai\\cv-project-4-smart-cropping\\cropped: True\n",
+            "20221226_191008.jpg written to D:\\Projects\\repos\\ai\\cv-project-4-smart-cropping\\cropped: True\n",
+            "20221226_191016.jpg written to D:\\Projects\\repos\\ai\\cv-project-4-smart-cropping\\cropped: True\n",
+            "20221226_191025.jpg written to D:\\Projects\\repos\\ai\\cv-project-4-smart-cropping\\cropped: True\n",
+            "20221226_191052.jpg written to D:\\Projects\\repos\\ai\\cv-project-4-smart-cropping\\cropped: True\n",
+            "20221226_191057.jpg written to D:\\Projects\\repos\\ai\\cv-project-4-smart-cropping\\cropped: True\n",
+            "20221226_191101.jpg written to D:\\Projects\\repos\\ai\\cv-project-4-smart-cropping\\cropped: True\n",
+            "20221226_191112.jpg written to D:\\Projects\\repos\\ai\\cv-project-4-smart-cropping\\cropped: True\n"
           ]
         }
       ],
       "source": [
-        "print(len(raw_images))"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "def cropImage(images):\n",
-        "    for image in images:\n",
-        "        #Read image and convert to gray.\n",
-        "        gray_image = cv2.cvtColor(image,cv2.COLOR_BGR2GRAY)\n",
-        "        #Use blur to get rid of the notebook's details.\n",
-        "        blurred_gray_image = cv2.blur(gray_image,(21,21))\n",
-        "        #forget histogram, we assume threshold values from testing earlier\n",
-        "        _,thresholded_blurry_image = cv2.threshold(blurred_gray_image,165,255,cv2.THRESH_BINARY)\n",
-        "        #Detect contours (which are undivided, closed shapes).\n",
-        "        contours, hierarchy = cv2.findContours(thresholded_blurry_image,cv2.RETR_TREE, cv2.CHAIN_APPROX_SIMPLE)\n",
-        "        output = image.copy()\n",
-        "        if len(contours) != 0:\n",
-        "            c = max(contours, key = cv2.contourArea)\n",
-        "            # coordinates of the contour\n",
-        "            x,y,w,h = cv2.boundingRect(c)\n",
-        "        #now crop image\n",
-        "        output = image[y:y+h, x:x+w]\n",
-        "        # save cropped image\n",
-        "        status = cv2.imwrite(output_path + image_filename + '_cropped' + '.jpg', output)\n",
-        "        print(image_filename + \" written to \" + output_path + \": \" + status)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "cropImage(raw_images)"
+        "bulkCropImages(input_path)"
       ]
     }
   ],
@@ -318,7 +326,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.10"
+      "version": "3.8.10 (tags/v3.8.10:3d8993a, May  3 2021, 11:48:03) [MSC v.1928 64 bit (AMD64)]"
     },
     "vscode": {
       "interpreter": {
