updated mdp code

--- a/mastering-rl/mrl-03-markov-decision-process/mdp.ipynb
+++ b/mastering-rl/mrl-03-markov-decision-process/mdp.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## n-step behavior in the grid world"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,21 +19,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "m = 3\n",
-    "m2 = m ** 2\n",
-    "q = np.zeros(m2)\n",
-    "q[m2 // 2] = 1"
+    "m2 = m ** 2 #3 x 3 grid world or 9\n",
+    "q = np.zeros(m2) #q is probability distribution\n",
+    "q[m2 // 2] = 1  #divides 9 by 2 to equal 4.5 but discards remainder to = 4. middle of gridworld (zero index). set probability distribution to 1 here"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 0., 0., 0., 1., 0., 0., 0., 0.])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "q"
    ]
@@ -37,9 +56,9 @@
    "outputs": [],
    "source": [
     "def get_P(m, p_up, p_down, p_left, p_right):\n",
-    "    m2 = m ** 2\n",
-    "    P = np.zeros((m2, m2))\n",
-    "    ix_map = {i + 1: (i // m, i % m) for i in range(m2)}\n",
+    "    m2 = m ** 2 #create grid world (e.g 3x3 or 9 of m=3)\n",
+    "    P = np.zeros((m2, m2)) #n x n transition probability matrix\n",
+    "    ix_map = {i + 1: (i // m, i % m) for i in range(m2)} #start at index 1 instead of python 0.\n",
     "    for i in range(m2):\n",
     "        for j in range(m2):\n",
     "            r1, c1 = ix_map[i + 1]\n",
@@ -367,7 +386,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10 (tags/v3.8.10:3d8993a, May  3 2021, 11:48:03) [MSC v.1928 64 bit (AMD64)]"
+   "version": "3.8.10"
   },
   "vscode": {
    "interpreter": {
