--- a/mastering-rl/mrl-03-markov-decision-process/mdp.ipynb
+++ b/mastering-rl/mrl-03-markov-decision-process/mdp.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
     "    P = np.zeros((m2, m2)) #n x n transition probability matrix\n",
     "    ix_map = {i + 1: (i // m, i % m) for i in range(m2)} #start at index 1 instead of python 0.\n",
     "    for i in range(m2):\n",
-    "        for j in range(m2):\n",
+    "        for j in range(m2): #for each n x n position on the grid\n",
     "            r1, c1 = ix_map[i + 1]\n",
     "            r2, c2 = ix_map[j + 1]\n",
     "            rdiff = r1 - r2\n",
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,9 +99,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.  , 0.3 , 0.  , 0.25, 0.  , 0.25, 0.  , 0.2 , 0.  ])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.matmul(q, P)"
    ]
