--- a/dl/dl-project-3-rnn-lstm/rnn_lstm.ipynb
+++ b/dl/dl-project-3-rnn-lstm/rnn_lstm.ipynb
@@ -30,15 +30,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#data handling\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "\n",
-    "from sklearn.preprocessing import MinMaxScaler #for feature scaling\n",
+    "#feature scaling\n",
+    "from sklearn.preprocessing import MinMaxScaler #\n",
     "\n",
-    "#for model building\n",
+    "#model building\n",
     "from keras.models import Sequential\n",
-    "from keras.layers import Dense, LSTM, Dropout"
+    "from keras.layers import Dense, LSTM, Dropout\n",
+    "\n",
+    "#model visualisation\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "#model evaluation\n",
+    "import math\n",
+    "from sklearn.metrics import mean_squared_error"
    ]
   },
   {
@@ -518,7 +526,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Visualising the results"
+    "### Visualising the results\n",
+    "A line chart was created showing real and predicted stock prices for Jan 2017. From the graph we can see that the model's prediction lags behind the real stock price. The model cannot react to fast non linear changes. Brownian motion (or Wiener process) which is a continuous time stochastic process tells us that variations in stock price are independent from the past and is something the model cannot react to. However the model can follow the smooth transitions of normal trading."
    ]
   },
   {
@@ -545,6 +554,47 @@
     "plt.ylabel('Google Stock Price')\n",
     "plt.legend()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Evaluating the model"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using RMSE on this Stock Price Prediction problem to evaluate the model does not make much sense. We are more interested in the directions taken by our predictions, rather than the closeness of their values to the real stock price. The prediction could  be close but tak the opposite direction from the real stock price!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rmse = math.sqrt(mean_squared_error(real_stock_price, predicted_stock_price))\n",
+    "relative_error = rmse / len(dataset_test)\n",
+    "\n",
+    "print(\"RMSE: \" + str(rmse) + \"\\n\" + \"Relative Error:\" + str(relative_error))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### How the model could be improved\n",
+    "1. Use more data (10 years instead of 5)\n",
+    "2. Increase the number of timesteps (3 months to 6 months)\n",
+    "3. Add more indicators.\n",
+    "4. Add more LSTM layers.\n",
+    "5. Add more neurones to the LSTM layers"
    ]
   }
  ],
