--- a/nlp/nlp-project-02/bert_fine_tune_sentence_classification.ipynb
+++ b/nlp/nlp-project-02/bert_fine_tune_sentence_classification.ipynb
@@ -410,7 +410,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Build BERT Model"
+    "## BERT Model"
    ]
   },
   {
