--- a/ml/ml-project-24-model-selection/python/ros-kfcv.ipynb
+++ b/ml/ml-project-24-model-selection/python/ros-kfcv.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# K Fold Cross Validation"
+    "# K Fold Cross Validation with Support Vector Machines"
    ]
   },
   {
