--- a/ml/ml-project-24-model-selection/python/ros-gs.ipynb
+++ b/ml/ml-project-24-model-selection/python/ros-gs.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Grid Search"
+    "# Grid Search for Support Vector Machine"
    ]
   },
   {
