--- a/ml/ml-project-24-model-selection/python/ros-model-selection.ipynb
+++ b/ml/ml-project-24-model-selection/python/ros-model-selection.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Classification Model Selection with XGBoost"
+    "# Classification Model Selection (DT, KNN, SVM, LR, RF, XGBoost)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Import Libraries"
    ]
   },
   {
@@ -15,14 +22,24 @@
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "\n",
+    "#data preprocessing\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "#ml models\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "\n",
+    "#evaluations\n",
+    "from sklearn.metrics import confusion_matrix, accuracy_score"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## import the dataset"
+    "## Import the dataset"
    ]
   },
   {
@@ -49,7 +66,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import train_test_split\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.25, random_state = 0)"
    ]
   },
@@ -66,7 +82,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.preprocessing import StandardScaler\n",
     "sc = StandardScaler()\n",
     "X_train = sc.fit_transform(X_train)\n",
     "X_test = sc.transform(X_test)"
@@ -76,7 +91,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Decision Tree Classification Model on the Training Set"
+    "## Decision Tree Classification Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Training the Decision Tree Classification model on the Training set"
    ]
   },
   {
@@ -99,8 +121,7 @@
     }
    ],
    "source": [
-    "# Training the Decision Tree Classification model on the Training set\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
+    "\n",
     "classifier = DecisionTreeClassifier(criterion = 'entropy', random_state = 0)\n",
     "classifier.fit(X_train, y_train)"
    ]
@@ -109,7 +130,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Making the DT Confusion Matrix"
+    "### Making the DT Confusion Matrix"
    ]
   },
   {
@@ -137,7 +158,6 @@
     }
    ],
    "source": [
-    "from sklearn.metrics import confusion_matrix, accuracy_score\n",
     "y_pred = classifier.predict(X_test)\n",
     "cm = confusion_matrix(y_test, y_pred)\n",
     "print(cm)\n",
