fine tuning bert

--- a/nlp/nlp-project-03/bert_fine_tune_sentence_classification.ipynb
+++ b/nlp/nlp-project-03/bert_fine_tune_sentence_classification.ipynb
@@ -645,7 +645,12 @@
     "\n",
     "for _ in trange(epochs, desc='Epoch'): #t range is a tqdm wrapper around normal python range function\n",
     "    model.train()#set to training mode\n",
-    "    \n"
+    "\n",
+    "    tr_loss, nb_tr_examples, nb_tr_steps = 0, 0, 0 #tracking variables\n",
+    "    \n",
+    "    #train data for one epoch\n",
+    "    for step, batch in enumerate(train_dataloader):\n",
+    "        pass\n"
    ]
   }
  ],
