about to pretrain the model

--- a/nlp/nlp-project-04/monteBERT.ipynb
+++ b/nlp/nlp-project-04/monteBERT.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,9 +27,7 @@
     "from tokenizers.implementations import ByteLevelBPETokenizer\n",
     "from tokenizers.processors import BertProcessing\n",
     "import torch\n",
-    "from transformers import RobertaConfig\n",
-    "from transformers import RobertaTokenizer\n",
-    "from transformers import RobertaForMaskedLM"
+    "from transformers import RobertaConfig, RobertaTokenizer, RobertaForMaskedLM, LineByLineTextDataset, DataCollatorForLanguageModeling, Trainer, TrainingArguments"
    ]
   },
   {
@@ -3157,7 +3155,235 @@
    ],
    "source": [
     "for p in range(0,lp):\n",
-    "    print(LP[p])"
+    "    print(LP[p])\n",
+    "#number of parameters is calculated by taking all parameters in the model and adding them up\n",
+    "#52k vocab x 768 dimensions; 768dimensions/12heads = 64 dimensions per head"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 52000 768 39936000\n",
+      "1 514 768 394752\n",
+      "2 1 768 768\n",
+      "3 768 768\n",
+      "4 768 768\n",
+      "5 768 768 589824\n",
+      "6 768 768\n",
+      "7 768 768 589824\n",
+      "8 768 768\n",
+      "9 768 768 589824\n",
+      "10 768 768\n",
+      "11 768 768 589824\n",
+      "12 768 768\n",
+      "13 768 768\n",
+      "14 768 768\n",
+      "15 3072 768 2359296\n",
+      "16 3072 3072\n",
+      "17 768 3072 2359296\n",
+      "18 768 768\n",
+      "19 768 768\n",
+      "20 768 768\n",
+      "21 768 768 589824\n",
+      "22 768 768\n",
+      "23 768 768 589824\n",
+      "24 768 768\n",
+      "25 768 768 589824\n",
+      "26 768 768\n",
+      "27 768 768 589824\n",
+      "28 768 768\n",
+      "29 768 768\n",
+      "30 768 768\n",
+      "31 3072 768 2359296\n",
+      "32 3072 3072\n",
+      "33 768 3072 2359296\n",
+      "34 768 768\n",
+      "35 768 768\n",
+      "36 768 768\n",
+      "37 768 768 589824\n",
+      "38 768 768\n",
+      "39 768 768 589824\n",
+      "40 768 768\n",
+      "41 768 768 589824\n",
+      "42 768 768\n",
+      "43 768 768 589824\n",
+      "44 768 768\n",
+      "45 768 768\n",
+      "46 768 768\n",
+      "47 3072 768 2359296\n",
+      "48 3072 3072\n",
+      "49 768 3072 2359296\n",
+      "50 768 768\n",
+      "51 768 768\n",
+      "52 768 768\n",
+      "53 768 768 589824\n",
+      "54 768 768\n",
+      "55 768 768 589824\n",
+      "56 768 768\n",
+      "57 768 768 589824\n",
+      "58 768 768\n",
+      "59 768 768 589824\n",
+      "60 768 768\n",
+      "61 768 768\n",
+      "62 768 768\n",
+      "63 3072 768 2359296\n",
+      "64 3072 3072\n",
+      "65 768 3072 2359296\n",
+      "66 768 768\n",
+      "67 768 768\n",
+      "68 768 768\n",
+      "69 768 768 589824\n",
+      "70 768 768\n",
+      "71 768 768 589824\n",
+      "72 768 768\n",
+      "73 768 768 589824\n",
+      "74 768 768\n",
+      "75 768 768 589824\n",
+      "76 768 768\n",
+      "77 768 768\n",
+      "78 768 768\n",
+      "79 3072 768 2359296\n",
+      "80 3072 3072\n",
+      "81 768 3072 2359296\n",
+      "82 768 768\n",
+      "83 768 768\n",
+      "84 768 768\n",
+      "85 768 768 589824\n",
+      "86 768 768\n",
+      "87 768 768 589824\n",
+      "88 768 768\n",
+      "89 768 768 589824\n",
+      "90 768 768\n",
+      "91 768 768 589824\n",
+      "92 768 768\n",
+      "93 768 768\n",
+      "94 768 768\n",
+      "95 3072 768 2359296\n",
+      "96 3072 3072\n",
+      "97 768 3072 2359296\n",
+      "98 768 768\n",
+      "99 768 768\n",
+      "100 768 768\n",
+      "101 52000 52000\n",
+      "102 768 768 589824\n",
+      "103 768 768\n",
+      "104 768 768\n",
+      "105 768 768\n",
+      "83504416\n"
+     ]
+    }
+   ],
+   "source": [
+    "#count the number of parameters of each tensor\n",
+    "np=0\n",
+    "for p in range(0,lp):#number of tensors\n",
+    "    PL2=True\n",
+    "    try:\n",
+    "        L2=len(LP[p][0]) #2d check\n",
+    "    except:\n",
+    "        L2 = 1 #1d\n",
+    "        PL2=False\n",
+    "    L1=len(LP[p])\n",
+    "    L3=L1*L2\n",
+    "    np+=L3 #params per tensor\n",
+    "    if PL2==True:\n",
+    "        print(p,L1,L2,L3) # size of params\n",
+    "    if PL2==False:\n",
+    "        print(p,L1,L3)\n",
+    "print(np) #total # of params"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Build the dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\Projects\\repos\\ai\\venv_nlp\\lib\\site-packages\\transformers\\data\\datasets\\language_modeling.py:119: FutureWarning: This dataset will be removed from the library soon, preprocessing should be handled with the 🤗 Datasets library. You can have a look at this example script for pointers: https://github.com/huggingface/transformers/blob/main/examples/pytorch/language-modeling/run_mlm.py\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataset = LineByLineTextDataset(\n",
+    "    tokenizer=tokenizer,\n",
+    "    file_path=\"./data/cristo.txt\",\n",
+    "    block_size=128,#limits the length of an example\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create a data collector"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_collator = DataCollatorForLanguageModeling(\n",
+    "    tokenizer=tokenizer, mlm=True, mlm_probability=0.15\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Initalise the Trainer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "Using the `Trainer` with `PyTorch` requires `accelerate>=0.20.1`: Please run `pip install transformers[torch]` or `pip install accelerate -U`",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32md:\\Projects\\repos\\ai\\nlp\\nlp-project-04\\monteBERT.ipynb Cell 33\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/Projects/repos/ai/nlp/nlp-project-04/monteBERT.ipynb#X46sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m training_args \u001b[39m=\u001b[39m TrainingArguments(\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Projects/repos/ai/nlp/nlp-project-04/monteBERT.ipynb#X46sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m     output_dir\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39m./content/MonteBERT\u001b[39;49m\u001b[39m\"\u001b[39;49m,\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Projects/repos/ai/nlp/nlp-project-04/monteBERT.ipynb#X46sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m     overwrite_output_dir\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m,\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Projects/repos/ai/nlp/nlp-project-04/monteBERT.ipynb#X46sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     num_train_epochs\u001b[39m=\u001b[39;49m\u001b[39m1\u001b[39;49m,\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Projects/repos/ai/nlp/nlp-project-04/monteBERT.ipynb#X46sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     per_device_train_batch_size\u001b[39m=\u001b[39;49m\u001b[39m64\u001b[39;49m,\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Projects/repos/ai/nlp/nlp-project-04/monteBERT.ipynb#X46sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     save_steps\u001b[39m=\u001b[39;49m\u001b[39m10_000\u001b[39;49m,\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Projects/repos/ai/nlp/nlp-project-04/monteBERT.ipynb#X46sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m     save_total_limit\u001b[39m=\u001b[39;49m\u001b[39m2\u001b[39;49m,\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Projects/repos/ai/nlp/nlp-project-04/monteBERT.ipynb#X46sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m )\n",
+      "File \u001b[1;32m<string>:113\u001b[0m, in \u001b[0;36m__init__\u001b[1;34m(self, output_dir, overwrite_output_dir, do_train, do_eval, do_predict, evaluation_strategy, prediction_loss_only, per_device_train_batch_size, per_device_eval_batch_size, per_gpu_train_batch_size, per_gpu_eval_batch_size, gradient_accumulation_steps, eval_accumulation_steps, eval_delay, learning_rate, weight_decay, adam_beta1, adam_beta2, adam_epsilon, max_grad_norm, num_train_epochs, max_steps, lr_scheduler_type, warmup_ratio, warmup_steps, log_level, log_level_replica, log_on_each_node, logging_dir, logging_strategy, logging_first_step, logging_steps, logging_nan_inf_filter, save_strategy, save_steps, save_total_limit, save_safetensors, save_on_each_node, no_cuda, use_cpu, use_mps_device, seed, data_seed, jit_mode_eval, use_ipex, bf16, fp16, fp16_opt_level, half_precision_backend, bf16_full_eval, fp16_full_eval, tf32, local_rank, ddp_backend, tpu_num_cores, tpu_metrics_debug, debug, dataloader_drop_last, eval_steps, dataloader_num_workers, past_index, run_name, disable_tqdm, remove_unused_columns, label_names, load_best_model_at_end, metric_for_best_model, greater_is_better, ignore_data_skip, sharded_ddp, fsdp, fsdp_min_num_params, fsdp_config, fsdp_transformer_layer_cls_to_wrap, deepspeed, label_smoothing_factor, optim, optim_args, adafactor, group_by_length, length_column_name, report_to, ddp_find_unused_parameters, ddp_bucket_cap_mb, ddp_broadcast_buffers, dataloader_pin_memory, skip_memory_metrics, use_legacy_prediction_loop, push_to_hub, resume_from_checkpoint, hub_model_id, hub_strategy, hub_token, hub_private_repo, hub_always_push, gradient_checkpointing, include_inputs_for_metrics, fp16_backend, push_to_hub_model_id, push_to_hub_organization, push_to_hub_token, mp_parameters, auto_find_batch_size, full_determinism, torchdynamo, ray_scope, ddp_timeout, torch_compile, torch_compile_backend, torch_compile_mode, dispatch_batches)\u001b[0m\n",
+      "File \u001b[1;32md:\\Projects\\repos\\ai\\venv_nlp\\lib\\site-packages\\transformers\\training_args.py:1405\u001b[0m, in \u001b[0;36mTrainingArguments.__post_init__\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m   1399\u001b[0m     \u001b[39mif\u001b[39;00m version\u001b[39m.\u001b[39mparse(version\u001b[39m.\u001b[39mparse(torch\u001b[39m.\u001b[39m__version__)\u001b[39m.\u001b[39mbase_version) \u001b[39m==\u001b[39m version\u001b[39m.\u001b[39mparse(\u001b[39m\"\u001b[39m\u001b[39m2.0.0\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39mand\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mfp16:\n\u001b[0;32m   1400\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39m--optim adamw_torch_fused with --fp16 requires PyTorch>2.0\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m   1402\u001b[0m \u001b[39mif\u001b[39;00m (\n\u001b[0;32m   1403\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mframework \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mpt\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m   1404\u001b[0m     \u001b[39mand\u001b[39;00m is_torch_available()\n\u001b[1;32m-> 1405\u001b[0m     \u001b[39mand\u001b[39;00m (\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mdevice\u001b[39m.\u001b[39mtype \u001b[39m!=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mcuda\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m   1406\u001b[0m     \u001b[39mand\u001b[39;00m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdevice\u001b[39m.\u001b[39mtype \u001b[39m!=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mnpu\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m   1407\u001b[0m     \u001b[39mand\u001b[39;00m (get_xla_device_type(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdevice) \u001b[39m!=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mGPU\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m   1408\u001b[0m     \u001b[39mand\u001b[39;00m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mfp16 \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mfp16_full_eval)\n\u001b[0;32m   1409\u001b[0m ):\n\u001b[0;32m   1410\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[0;32m   1411\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mFP16 Mixed precision training with AMP or APEX (`--fp16`) and FP16 half precision evaluation\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m   1412\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39m (`--fp16_full_eval`) can only be used on CUDA or NPU devices.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m   1413\u001b[0m     )\n\u001b[0;32m   1415\u001b[0m \u001b[39mif\u001b[39;00m (\n\u001b[0;32m   1416\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mframework \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mpt\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m   1417\u001b[0m     \u001b[39mand\u001b[39;00m is_torch_available()\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   1422\u001b[0m     \u001b[39mand\u001b[39;00m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mbf16 \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mbf16_full_eval)\n\u001b[0;32m   1423\u001b[0m ):\n",
+      "File \u001b[1;32md:\\Projects\\repos\\ai\\venv_nlp\\lib\\site-packages\\transformers\\training_args.py:1852\u001b[0m, in \u001b[0;36mTrainingArguments.device\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m   1848\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m   1849\u001b[0m \u001b[39mThe device used by this process.\u001b[39;00m\n\u001b[0;32m   1850\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m   1851\u001b[0m requires_backends(\u001b[39mself\u001b[39m, [\u001b[39m\"\u001b[39m\u001b[39mtorch\u001b[39m\u001b[39m\"\u001b[39m])\n\u001b[1;32m-> 1852\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_setup_devices\n",
+      "File \u001b[1;32md:\\Projects\\repos\\ai\\venv_nlp\\lib\\site-packages\\transformers\\utils\\generic.py:54\u001b[0m, in \u001b[0;36mcached_property.__get__\u001b[1;34m(self, obj, objtype)\u001b[0m\n\u001b[0;32m     52\u001b[0m cached \u001b[39m=\u001b[39m \u001b[39mgetattr\u001b[39m(obj, attr, \u001b[39mNone\u001b[39;00m)\n\u001b[0;32m     53\u001b[0m \u001b[39mif\u001b[39;00m cached \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m---> 54\u001b[0m     cached \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mfget(obj)\n\u001b[0;32m     55\u001b[0m     \u001b[39msetattr\u001b[39m(obj, attr, cached)\n\u001b[0;32m     56\u001b[0m \u001b[39mreturn\u001b[39;00m cached\n",
+      "File \u001b[1;32md:\\Projects\\repos\\ai\\venv_nlp\\lib\\site-packages\\transformers\\training_args.py:1767\u001b[0m, in \u001b[0;36mTrainingArguments._setup_devices\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m   1765\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m is_sagemaker_mp_enabled():\n\u001b[0;32m   1766\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m is_accelerate_available(min_version\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m0.20.1\u001b[39m\u001b[39m\"\u001b[39m):\n\u001b[1;32m-> 1767\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mImportError\u001b[39;00m(\n\u001b[0;32m   1768\u001b[0m             \u001b[39m\"\u001b[39m\u001b[39mUsing the `Trainer` with `PyTorch` requires `accelerate>=0.20.1`: Please run `pip install transformers[torch]` or `pip install accelerate -U`\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m   1769\u001b[0m         )\n\u001b[0;32m   1770\u001b[0m     AcceleratorState\u001b[39m.\u001b[39m_reset_state(reset_partial_state\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n\u001b[0;32m   1771\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdistributed_state \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n",
+      "\u001b[1;31mImportError\u001b[0m: Using the `Trainer` with `PyTorch` requires `accelerate>=0.20.1`: Please run `pip install transformers[torch]` or `pip install accelerate -U`"
+     ]
+    }
+   ],
+   "source": [
+    "training_args = TrainingArguments(\n",
+    "    output_dir=\"./content/MonteBERT\",\n",
+    "    overwrite_output_dir=True,\n",
+    "    num_train_epochs=1,\n",
+    "    per_device_train_batch_size=64,\n",
+    "    save_steps=10_000,\n",
+    "    save_total_limit=2,\n",
+    ")"
    ]
   }
  ],
