--- a/football-tracking/football_track.ipynb
+++ b/football-tracking/football_track.ipynb
@@ -5,10 +5,8 @@
    "metadata": {},
    "source": [
     "## Setup\n",
-    "\n",
-    "- check gpu with `!nvidia-smi`\n",
-    "- install kaggle to get data `!pip install kaggle --upgrade --quiet`\n",
-    "- download [dataset](https://www.kaggle.com/competitions/dfl-bundesliga-data-shootout/data) using [Kaggle API](https://github.com/Kaggle/kaggle-api)"
+    "- download [dataset](https://www.kaggle.com/competitions/dfl-bundesliga-data-shootout/data) using [Kaggle API](https://github.com/Kaggle/kaggle-api), 150 videos that we can use for training\n",
+    "- pip install ultralytics to get access to YOLO"
    ]
   },
   {
@@ -17,17 +15,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "HOME = os.getcwd()\n",
-    "print(HOME)"
+    "from ultralytics import YOLO"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = YOLO('yolov8x')\n",
+    "\n",
+    "results = model.predict('./data/08fd33_4.mp4', save=True)\n",
+    "print(results[0])\n",
+    "for box in results[0].boxes:\n",
+    "    print(box)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Download data\n",
-    "!pip install kaggle --upgrade --quiet"
+    "problems,\n",
+    "ball tracking not really good\n",
+    "players on pitch and spectators off pitch\n",
+    "if colour for ref is spotted then label as a ref."
    ]
   }
  ],
